@@ -1,125 +1,125 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="td4j" default="build">
 
-    <tstamp>
-        <format property="version" pattern="y.M" />
-        <format property="date" pattern="yyyy-MM-dd" />
-    </tstamp>
+	<tstamp>
+		<format property="version" pattern="y.M" />
+		<format property="date" pattern="yyyy-MM-dd" />
+	</tstamp>
 
-    <property name="base.dir" value="." />
-    <property name="src.dir" value="${base.dir}/src" />
+	<property name="base.dir" value="." />
+	<property name="src.dir" value="${base.dir}/src" />
 	<property name="rsc.dir" value="${base.dir}/resources" />
-    <property name="lib.dir" value="${base.dir}/lib" />
-    <property name="classes.dir" value="${base.dir}/classes" />
+	<property name="lib.dir" value="${base.dir}/lib" />
+	<property name="classes.dir" value="${base.dir}/classes" />
 
-    <property name="ex.src.dir" value="${base.dir}/examples" />
-    <property name="ex.classes.dir" value="${base.dir}/classes-examples" />
+	<property name="ex.src.dir" value="${base.dir}/examples" />
+	<property name="ex.classes.dir" value="${base.dir}/classes-examples" />
 
-    <property name="release.dir" value="${base.dir}/release/td4j-${version}" />
-    <property name="release.rsc.dir" value="${base.dir}/release-resource" />
-
-
-    <path id="classpath">
-        <fileset dir="${lib.dir}">
-            <include name="**/*.jar" />
-        </fileset>
-        <pathelement location="${classes.dir}" />
-    </path>
-
-    <target name="showenv">
-        <echo message="-----------[ env ]---------------" />
-        <echo message="os.arch                   = ${os.arch}" />
-        <echo message="os.name                   = ${os.name}" />
-        <echo message="os.version                = ${os.version}" />
-        <echo message="java.vm.vendor            = ${java.vm.vendor}" />
-        <echo message="java.vm.version           = ${java.vm.version}" />
-        <echo message="ant.version               = ${ant.version}" />
-    </target>
-
-    <target name="clean">
-        <delete dir="${classes.dir}" />
-        <delete dir="${ex.classes.dir}" />
-    </target>
-
-    <target name="build" depends="showenv,clean">
-        <mkdir dir="${classes.dir}" />
-        <javac destdir="${classes.dir}" classpathref="classpath" debug="on" fork="true">
-            <src path="${src.dir}" />
-        </javac>
-    	<copy todir="${classes.dir}">
-    		<fileset dir="${rsc.dir}" />
-    	</copy>
-    </target>
+	<property name="release.dir" value="${base.dir}/release/td4j-${version}" />
+	<property name="release.rsc.dir" value="${base.dir}/release-resource" />
 
 
-    <target name="release" depends="build">
-        <mkdir dir="${release.dir}" />
-        <jar destfile="${release.dir}/td4j-${version}.jar">
-            <fileset dir="${classes.dir}">
-                <include name="**/*.class" />
-            	<include name="**/*.png" />
-            </fileset>
-        </jar>
-        <jar destfile="${release.dir}/td4j-${version}-src.jar">
-            <fileset dir="${src.dir}">
-                <include name="**/*.java" />
-            </fileset>
-        	<fileset dir="${rsc.dir}">
-            	<include name="**/*.png" />
-            </fileset>
-        </jar>
-    </target>
+	<path id="classpath">
+		<fileset dir="${lib.dir}">
+			<include name="**/*.jar" />
+		</fileset>
+		<pathelement location="${classes.dir}" />
+	</path>
+
+	<target name="showenv">
+		<echo message="-----------[ env ]---------------" />
+		<echo message="os.arch                   = ${os.arch}" />
+		<echo message="os.name                   = ${os.name}" />
+		<echo message="os.version                = ${os.version}" />
+		<echo message="java.vm.vendor            = ${java.vm.vendor}" />
+		<echo message="java.vm.version           = ${java.vm.version}" />
+		<echo message="ant.version               = ${ant.version}" />
+	</target>
+
+	<target name="clean">
+		<delete dir="${classes.dir}" />
+		<delete dir="${ex.classes.dir}" />
+	</target>
+
+	<target name="build" depends="showenv,clean">
+		<mkdir dir="${classes.dir}" />
+		<javac destdir="${classes.dir}" classpathref="classpath" debug="on" fork="true">
+			<src path="${src.dir}" />
+		</javac>
+		<copy todir="${classes.dir}">
+			<fileset dir="${rsc.dir}" />
+		</copy>
+	</target>
 
 
-    <!-- examples -->
-    <target name="build-examples" depends="build">
-        <mkdir dir="${ex.classes.dir}" />
-        <javac destdir="${ex.classes.dir}" classpathref="classpath" debug="on" fork="true">
-            <src path="${ex.src.dir}" />
-        </javac>
-    </target>
+	<target name="release" depends="build">
+		<mkdir dir="${release.dir}" />
+		<jar destfile="${release.dir}/td4j-${version}.jar">
+			<fileset dir="${classes.dir}">
+				<include name="**/*.class" />
+				<include name="**/*.png" />
+			</fileset>
+		</jar>
+		<jar destfile="${release.dir}/td4j-${version}-src.jar">
+			<fileset dir="${src.dir}">
+				<include name="**/*.java" />
+			</fileset>
+			<fileset dir="${rsc.dir}">
+				<include name="**/*.png" />
+			</fileset>
+		</jar>
+	</target>
 
 
-    <target name="release-examples" depends="build-examples,release">
-        <mkdir dir="${release.dir}" />
-        <jar destfile="${release.dir}/td4j-${version}-examples.jar">
-            <fileset dir="${ex.classes.dir}">
-                <include name="**/*.class" />
-            	<include name="**/*.png" />
-            </fileset>
-        </jar>
-        <jar destfile="${release.dir}/td4j-${version}-examples-src.jar">
-            <fileset dir="${ex.src.dir}">
-                <include name="**/*.java" />
-            	<include name="**/*.png" />
-            </fileset>
-        </jar>
-    </target>
+	<!-- examples -->
+	<target name="build-examples" depends="build">
+		<mkdir dir="${ex.classes.dir}" />
+		<javac destdir="${ex.classes.dir}" classpathref="classpath" debug="on" fork="true">
+			<src path="${ex.src.dir}" />
+		</javac>
+	</target>
 
 
-    <target name="clean-release">
-        <delete dir="${base.dir}/release/td4j-${version}" />
-    </target>
+	<target name="release-examples" depends="build-examples,release">
+		<mkdir dir="${release.dir}" />
+		<jar destfile="${release.dir}/td4j-${version}-examples.jar">
+			<fileset dir="${ex.classes.dir}">
+				<include name="**/*.class" />
+				<include name="**/*.png" />
+			</fileset>
+		</jar>
+		<jar destfile="${release.dir}/td4j-${version}-examples-src.jar">
+			<fileset dir="${ex.src.dir}">
+				<include name="**/*.java" />
+				<include name="**/*.png" />
+			</fileset>
+		</jar>
+	</target>
 
-    <target name="release-zip" depends="clean-release,release,release-examples">
-        <copy file="${base.dir}/COPYING" tofile="${release.dir}/COPYING" />
-        <copy todir="${release.dir}">
-            <fileset dir="${release.rsc.dir}" />
-        </copy>
 
-        <replace file="${release.dir}/README" token="@VERSION@" value="${version}" />
-        <replace file="${release.dir}/README" token="@DATE@" value="${date}" />
+	<target name="clean-release">
+		<delete dir="${base.dir}/release/td4j-${version}" />
+	</target>
 
-        <touch>
-            <fileset dir="${release.dir}" />
-        </touch>
+	<target name="release-zip" depends="clean-release,release,release-examples">
+		<copy file="${base.dir}/COPYING" tofile="${release.dir}/COPYING" />
+		<copy todir="${release.dir}">
+			<fileset dir="${release.rsc.dir}" />
+		</copy>
 
-        <zip destfile="${base.dir}/release/td4j-${version}.zip">
-            <fileset dir="${base.dir}/release/">
-                <include name="td4j-${version}/*" />
-            </fileset>
-        </zip>
-    </target>
+		<replace file="${release.dir}/README" token="@VERSION@" value="${version}" />
+		<replace file="${release.dir}/README" token="@DATE@" value="${date}" />
+
+		<touch>
+			<fileset dir="${release.dir}" />
+		</touch>
+
+		<zip destfile="${base.dir}/release/td4j-${version}.zip">
+			<fileset dir="${base.dir}/release/">
+				<include name="td4j-${version}/*" />
+			</fileset>
+		</zip>
+	</target>
 
 
 </project>
